# bulkfile-scripts

./: .gitignore  README.md  pyproject.toml  requirements.txt
dmel_r5_to_r6/: dmel_r5_to_r6_converter.pl  dmel_r5_to_r6_mapping.tsv
dmel_r5_to_r6/t/: 01_dmel_r5_to_r6_converter.t
fasta/: extract_seq_from_fasta.pl  flybase_id_to_fasta.py
gff/: problem_case_filter.pl
graphql/: constructs_by_gene.py
ids/: fbgn_id_updater.py  fbgn_updater.py
symbols/: symbol_to_id_lookup.py
